positions the winning score input field

--- a/4-DOM-pig-game/starter/style.css
+++ b/4-DOM-pig-game/starter/style.css
@@ -140,6 +140,11 @@ i {
 .btn-new { top: 45px;}
 .btn-roll { top: 403px;}
 .btn-hold { top: 467px;}
+input { 
+    position: absolute;
+    left: 20%;
+    top: 45px;
+}
 
 .dice {
     position: absolute;
